--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Please Recycle</title>
+    <title>Umbrella Project</title>
 </head>
 <body>
-    <h1>Reduce, Reuse, Recycle</h1>
+    <div id="root"></div>
 </body>
 </html>
