--- a/app/index.html
+++ b/app/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <div id="root"></div>
+    <div class="fixed overflow-hidden lg:w-4 lg:h-4 pointer-events-none rounded-full bg-black" id="cursor"></div>
 </body>
 </html>
