Fixed citations page.

--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <title>Umbrella Project</title>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root" class="break-words"></div>
     <div class="fixed overflow-hidden lg:w-4 lg:h-4 pointer-events-none rounded-full bg-black" id="cursor"></div>
 </body>
 </html>
