--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Umbrella Project</title>
 </head>
-<body>
+<body class="bg-blue-300">
     <div id="root" class="break-words"></div>
     <div class="fixed overflow-hidden lg:w-4 lg:h-4 pointer-events-none rounded-full bg-black" id="cursor"></div>
 </body>
